# parks-canada-fourier-transform

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
docs/scratch/: 01_image_explore_pukaskawa.ipynb  02_plot_date.ipynb
src/pcft/: __main__.py  geeft.py  image_processing.py  landsat.py  plot.py  processing.py  sentinel.py  user_input.py  vector_operations.py  visualize.py
tests/: helpers.py  test_image_processing.py  test_processing.py
